con vistas alarma y settings, antes de las notif

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "angular-datatables": "^8.0.0",
+    "angular2-useful-swiper": "^8.0.1-alpha.1",
     "cordova-plugin-network-information": "^2.0.2",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.20",
@@ -35,6 +36,7 @@
     "jquery": "^3.4.1",
     "ng-http-loader": "^6.0.1",
     "rxjs": "~6.5.1",
+    "swiper": "^5.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -54,6 +56,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
+    "@types/swiper": "^5.2.0",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
