--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,9 @@
                 "input": "node_modules/datatables.net-dt/css/jquery.dataTables.css"
               },
               {
+                "input": "node_modules/swiper/css/swiper.css"
+              },
+              {
                 "input": "src/theme/variables.scss"
               },
               {
@@ -45,7 +48,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js"
+              "node_modules/datatables.net/js/jquery.dataTables.js",
+              "node_modules/swiper/js/swiper.js"  
             ]
           },
           "configurations": {
