--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.16.0",
     "@ionic-native/network": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -29,6 +30,11 @@
     "@ionic/storage": "^2.2.0",
     "angular-datatables": "^8.0.0",
     "angular2-useful-swiper": "^8.0.1-alpha.1",
+    "cordova-android": "^8.1.0",
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-network-information": "^2.0.2",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.20",
@@ -58,6 +64,11 @@
     "@types/node": "~8.9.4",
     "@types/swiper": "^5.2.0",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -73,8 +84,21 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-network-information": {}
-    }
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android",
+      "browser"
+    ]
   },
   "imports-loader": "^0.7.1"
 }
