--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/lab": "2.0.10",
     "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.3.8",
