--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@ionic-native/http": "^5.0.0",
     "@ionic-native/local-notifications": "^5.16.0",
     "@ionic-native/network": "^5.16.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic-native/unique-device-id": "^5.17.1",
-    "@ionic/angular": "^4.7.1",
+    "@ionic-native/onesignal": "^5.17.1",
+    "@ionic-native/splash-screen": "^5.18.0",
+    "@ionic-native/status-bar": "^5.18.0",
+    "@ionic-native/unique-device-id": "^5.18.0",
+    "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
     "angular-datatables": "^8.0.0",
-    "angular2-useful-swiper": "^8.0.1-alpha.1",
+    "angular2-useful-swiper": "^8.0.1-beta.1",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-badge": "^0.8.8",
@@ -44,9 +45,10 @@
     "datatables.net-dt": "^1.10.20",
     "jquery": "^3.4.1",
     "ng-http-loader": "^6.0.1",
+    "onesignal-cordova-plugin": "^2.8.1",
     "rxjs": "~6.5.1",
-    "sweetalert2": "^9.4.0",
-    "swiper": "^5.2.0",
+    "sweetalert2": "^9.5.3",
+    "swiper": "^5.2.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -64,16 +66,16 @@
     "@ionic/lab": "2.0.10",
     "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.3.31",
-    "@types/node": "^8.9.5",
+    "@types/node": "^8.10.59",
     "@types/swiper": "^5.2.0",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.1",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -99,7 +101,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-uniquedeviceid": {}
+      "cordova-plugin-uniquedeviceid": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android",
