--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/device": "^5.17.1",
-    "@ionic-native/http": "^5.0.0",
-    "@ionic-native/local-notifications": "^5.16.0",
-    "@ionic-native/network": "^5.16.0",
-    "@ionic-native/onesignal": "^5.17.1",
-    "@ionic-native/splash-screen": "^5.18.0",
-    "@ionic-native/status-bar": "^5.18.0",
-    "@ionic-native/unique-device-id": "^5.18.0",
+    "@ionic-native/core": "^5.19.1",
+    "@ionic-native/device": "^5.19.1",
+    "@ionic-native/http": "^5.19.1",
+    "@ionic-native/local-notifications": "^5.19.1",
+    "@ionic-native/network": "^5.19.1",
+    "@ionic-native/onesignal": "^5.19.1",
+    "@ionic-native/splash-screen": "^5.19.1",
+    "@ionic-native/status-bar": "^5.19.1",
+    "@ionic-native/unique-device-id": "^5.19.1",
     "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
     "angular-datatables": "^8.0.0",
     "angular2-useful-swiper": "^8.0.1-beta.1",
-    "cordova-android": "^8.1.0",
+    "cordova-android": "^7.1.4",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
@@ -47,14 +47,14 @@
     "ng-http-loader": "^6.0.1",
     "onesignal-cordova-plugin": "^2.8.1",
     "rxjs": "~6.5.1",
-    "sweetalert2": "^9.5.3",
+    "sweetalert2": "^9.5.4",
     "swiper": "^5.2.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
@@ -82,7 +82,7 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
@@ -105,8 +105,8 @@
       "onesignal-cordova-plugin": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   },
   "imports-loader": "^0.7.1"
