--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@ionic-native/splash-screen": "^5.19.1",
     "@ionic-native/status-bar": "^5.19.1",
     "@ionic-native/unique-device-id": "^5.19.1",
-    "@ionic/angular": "^4.11.7",
+    "@ionic/angular": "^4.11.8",
     "@ionic/storage": "^2.2.0",
     "angular-datatables": "^8.0.0",
     "angular2-useful-swiper": "^8.0.1-beta.1",
@@ -47,14 +47,14 @@
     "ng-http-loader": "^6.0.1",
     "onesignal-cordova-plugin": "^2.8.2",
     "rxjs": "~6.5.1",
-    "sweetalert2": "^9.5.4",
-    "swiper": "^5.2.1",
+    "sweetalert2": "^9.6.1",
+    "swiper": "^5.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
@@ -63,13 +63,13 @@
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/app-scripts": "^3.2.4",
-    "@ionic/lab": "2.0.10",
+    "@ionic/lab": "^2.0.19",
     "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.3.31",
     "@types/node": "^8.10.59",
-    "@types/swiper": "^5.2.0",
+    "@types/swiper": "^5.2.1",
     "codelyzer": "^5.2.1",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
